# DummyML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  playground.ipynb  pytest.ini  setup.py
.github/workflows/: cmake.yml
dummyml/: __init__.py
include/dummyml/: dummy_classifier.hpp  dummy_clustering.hpp  dummy_regression.hpp  gaussian_process.hpp  k_means.hpp  kernel_k_means.hpp  model.hpp  naive_bayes_classifier.hpp  utils.hpp
scripts/: build_n_test.sh
src/dummyml/: CMakeLists.txt  bindings.cpp  dummy_classifier.cpp  dummy_clustering.cpp  dummy_regression.cpp  dummyml.cpp  gaussian_process.cpp  k_means.cpp  kernel_k_means.cpp  main.cpp  naive_bayes_classifier.cpp  utils.cpp
tests/: __init__.py  test_dummy_classifier.py  test_dummy_clustering.py  test_dummy_regression.py  test_gaussian_process.py  test_k_means.py  test_kernel_k_means.py  test_naive_bayes_classifier.py
